--- a/estilos.css
+++ b/estilos.css
@@ -392,6 +392,11 @@ body {
         display: grid;
         width: 100%;
         justify-content: center;
+        background-color: white;
+    }
+
+    #productos h1, #productos p, #productos h3{
+        text-align: center;
     }
 
     .imgProductos {
